--- a/css/style.css
+++ b/css/style.css
@@ -3,5 +3,8 @@ body{
     background-repeat: no-repeat;
     width: 100%;
     height: 300vh;
+    text-align: center;
+    font-family: 'Kaushan Script', cursive;
+    font-size: 24px;
     
 }
