--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 body{
-    background-image: url(../image/pizz.gif);
-    background-repeat: no-repeat;
+    background-image: url(../image/pizza-photography-overhead.jpg);
     width: 100%;
-    height: 300vh;
+    height:1000px;
     text-align: center;
     font-family: 'Kaushan Script', cursive;
-    font-size: 24px;
+    font-size: 60px;
+    color:white;
     
 }
+
