style the background color

--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,10 @@ body{
     
 }
 
+.pizza{
+    background-color: white;
+    opacity:unset;
+   border-radius: 5px;
+   padding: 20px;
+   margin-bottom: 40px;
+}
