--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,10 @@ body{
     font-size: 24px;
 
 }
+.beff{
+  background-color: white;
+  margin-top: 10px;
+  padding: 10px;
+  color: black;
+  font-size: 38px;
+}
