--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,16 @@
 body{
+    background-color:rgba(8, 8, 8, 0.438);
     background-image: url(../image/pizza-photography-overhead.jpg);
     width: 100%;
-    height:1000px;
     text-align: center;
     font-family: 'Kaushan Script', cursive;
     font-size: 60px;
     color:white;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position:center ;
+    background-attachment: fixed;
+    background-blend-mode: darken;
     
 }
 
@@ -27,4 +32,5 @@ body{
   padding: 10px;
   color: black;
   font-size: 38px;
+
 }
