--- a/css/style.css
+++ b/css/style.css
@@ -34,3 +34,9 @@ body{
   font-size: 38px;
 
 }
+.stella{
+    background-color:pink ;
+    margin-top: 10px;
+    padding: 20px;
+    font-size: 24px;
+}
