--- a/css/style.css
+++ b/css/style.css
@@ -28,10 +28,15 @@ body{
 }
 .beff{
   background-color: white;
-  margin-top: 10px;
-  padding: 10px;
+  margin-top:40px;
+  padding: 40px;
   color: black;
-  font-size: 38px;
+  font-size: 18px;
+  height:300px;
+  width: 15%;
+  margin-left: 750px;
+  
+  
 
 }
 .stella{
@@ -39,4 +44,5 @@ body{
     margin-top: 10px;
     padding: 20px;
     font-size: 24px;
+    
 }
