--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,13 @@ body{
     opacity:24px;
    border-radius: 5px;
    padding: 20px;
-   margin-bottom: 40px;
+   margin-bottom: 50px;
 }
 #price{
     color:black;
     font-size: 24px;
+    margin-top: 40px;
+    padding: 20px;
 
 }
 .beff{
@@ -45,4 +47,8 @@ body{
     padding: 20px;
     font-size: 24px;
     
+}
+#number{
+    width: 100%;
+    height: 60px;
 }
