--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-position:center ;
-    background-attachment: fixed;
+    background-attachment:fixed;
     background-blend-mode: darken;
     
 }
@@ -24,7 +24,7 @@ body{
 #price{
     color:black;
     font-size: 24px;
-    margin-top: 40px;
+    margin-top:80px;
     padding: 20px;
 
 }
@@ -51,4 +51,7 @@ body{
 #number{
     width: 100%;
     height: 60px;
+}
+h3{
+    height:15px;
 }
